--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
-<div><p>taimoor98</p></div>
+<div>
+    <p>taimoor98</p>
+</div>
+<div>Awais</div>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
