--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -18,41 +19,35 @@
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
+<!----------------------------------navbar------------------------------------------------->
+<nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+<span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand mr-auto" href="#"><img src="images/logo.jfif" height="30" width="41" alt=""></a>
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>Home</a></li>
+                <li class="nav-item "><a class="nav-link" href="about.html"><span class="fas fa-compact-disc fa-lg"></span>Collection</a></li>
+                <li class="nav-item "><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>menu</a></li>
+                <li class="nav-item "><a class="nav-link" href="contactus.html"><span class="fa fa-info fa-lg"></span>About Us</a></li>
+            </ul>
+            <span class="navbar-text">
+<a data-toggle="modal" data-target="#loginModal">
+<span class="fa fa-sign-in">login</span>
+            </a>
+            </span>
+        </div>
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand " style="padding-left: 4rem; " href="# "> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
-    </a>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="nav navl d-flex justify-content-around ">
-            <li class="nav-item ">
-                <a class="nav-link active " href="# ">Home</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link " href="# ">Our Work</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link about" href="# ">About Us</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link " href="./index.html/footer ">Contact Us</a>
-            </li>
-        </ul>
     </div>
-    <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
-
 </nav>
-
 
 
 
 <body>
 
-    
+
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
 
