--- a/index.html
+++ b/index.html
@@ -3,72 +3,199 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Tailor</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/load.css">
-    <link rel="stylesheet" href="style./css/popinfo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Project</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
-<!----------------------------------navbar------------------------------------------------->
-<nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-<span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand mr-auto" href="#"><img src="images/logo.jfif" height="30" width="41" alt=""></a>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>Home</a></li>
-                <li class="nav-item "><a class="nav-link" href="about.html"><span class="fas fa-compact-disc fa-lg"></span>Collection</a></li>
-                <li class="nav-item "><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>menu</a></li>
-                <li class="nav-item "><a class="nav-link" href="contactus.html"><span class="fa fa-info fa-lg"></span>About Us</a></li>
-            </ul>
-            <span class="navbar-text">
-<a data-toggle="modal" data-target="#loginModal">
-<span class="fa fa-sign-in">login</span>
-            </a>
-            </span>
-        </div>
-
-    </div>
-</nav>
 
 
 
 <body>
+    <!----------------------------------navbar------------------------------------------------->
+    <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+<span class="navbar-toggler-icon"></span>
+        </button>
+            <a class="navbar-brand mr-auto" href="#"><img src="images/logo.jfif" height="30" width="41" alt=""></a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>Home</a></li>
+                    <li class="nav-item "><a class="nav-link" href="about.html"><span class="fas fa-compact-disc fa-lg"></span>Collection</a></li>
+                    <li class="nav-item "><a class="nav-link" href="#"><span class="fas fa-tshirt fa-lg"></span>Fabric</a></li>
+                    <li class="nav-item "><a class="nav-link" href="contactus.html"><span class="fa fa-info fa-lg"></span>About Us</a></li>
+                </ul>
+                <span class="navbar-text">
+<a data-toggle="modal" data-target="#loginModal">
+<span class="fa fa-sign-in">login</span>
+                </a>
+                </span>
+            </div>
 
+        </div>
+    </nav>
 
-    <script src="./js/loading.js"></script>
-    <script src="./js/popinfo.js"></script>
+    <!---------------------jumbotorn----------------------------------------------->
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row row-header">
+                <div class="col-12 col-sm-6">
+                    <h1><i>Coming Soon</i></h1>
+                    <p><i>A project by Awais Ikram And Taimoor hassan</i></p>
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <img src="images/logo.jfif" height="55" width="75" alt="image" class="img-fluid">
+                </div>
+                <span class="jumbotron-text">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-info">Place Order Here</span>
+                </a>
+                </span>
+            </div>
+
+        </div>
+        </div>
+        </div>
+    </header>
+    <!--------------------------------------dummy text------------------------>
+
+    <div class="row row-content align-items-center">
+        <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <h3>Our Lipsmacking Culinary Creations</h3>
+        </div>
+        <div class="col col-sm order-sm-first col-md">
+            <div class="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="img">
+                <div class="media-body">
+                    <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.9</span></h2>
+                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-12 col-sm-4 col-md-3">
+        <h3>This Month's Promotions<span class="badge badge-danger">NEW</span></h3>
+    </div>
+    <div class="row row-content align-items-center">
+        <div class="col col-sm col-md">
+            <h2>Weekend Grand Buffet</h2>
+            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+        </div>
+    </div>
+
+    <div class="row row-content align-items-center">
+        <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <h3>Meet our Culinary Specialists</h3>
+        </div>
+        <div class="col col-sm order-sm-first col-md">
+            <div class="media">
+                <img class="d-flex mr-3 img-tumbnail align-self-center" src="img/alberto.png" alt="image">
+                <div class="media-body">
+                    <h2 class="mt-0">Alberto Somayya</h2>
+                    <h4>Executive Chef</h4>
+                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-content">
+        <div class="col-5 bg-warning">
+            <h3>Reserve a table</h3>
+        </div>
+        <div class="col-12 col-md-9">
+            <form>
+                <div class="form-group row">
+                    <label for="firstname" class="col-md-2 col-form-label">Number of Guest</label>
+                    <div class="col-md-5 align-self-center">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox1" value="option1">
+                            <label class="form-check-label" for="inlineCheckbox1">1</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox2" value="option2">
+                            <label class="form-check-label" for="inlineCheckbox2">2</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox3" value="option3">
+                            <label class="form-check-label" for="inlineCheckbox3">3</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox4" value="option4">
+                            <label class="form-check-label" for="inlineCheckbox4">4</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox5" value="option5">
+                            <label class="form-check-label" for="inlineCheckbox5">5</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox6" value="option6">
+                            <label class="form-check-label" for="inlineCheckbox6">6</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!--First column-->
+                        <div class="col-md-5">
+                            <div class="md-form mb-0">
+                                <div class="md-form mb-0">
+                                    <div class="md-form">
+                                        <label for="input_starttime">Pick a Time</label>
+                                        <input placeholder="Selected time" type="text" id="input_starttime" class="form-control timepicker">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Second column-->
+                        <div class="col-md-5">
+                            <div class="md-form mb-0">
+                                <div class="md-form mb-0">
+                                    <div class="md-form">
+                                        <label for="date-picker-example">pick a Date</label>
+                                        <input placeholder="Selected date" type="text" id="date-picker-example" class="form-control datepicker">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class=" col-md-6">
+                        <button type="submit" class="btn btn-primary">
+                                        Reserve
+                                    </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-------------------footer-------------------------------------------------------->
+    <footer>
+
+        <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
+            <i class="fas fa-at fa-1.9x"> Contact - Taimoor</i>
+        </a><br>
+        <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
+            <i class="fas fa-at fa-1.9x"> Contact - Awais</i>
+        </a>
+
+        <p>
+            <center>
+                <div class="copy"> <small>&copy; Copyright 2020 - Tailor online </div>
+            </center>
+    
+        </p>
+    </footer>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 
 </body>
-
-
-
-<footer>
-
-    <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Taimoor</i>
-    </a><br>
-    <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Awais</i>
-    </a>
-
-    <p>
-        <center>
-            <div class="copy"> <small>&copy; Copyright 2020 - Tailor online </div>
-        </center>
-
-    </p>
-</footer>
