--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
     <link rel="stylesheet" href="style./css/popinfo.css">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+        <span class="navbar-toggler-icon" ></span>
     </button>
-    <a class="navbar-brand " style="padding-left: 4rem; " href="# "> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+
+
+    <a class="navbar-brand " style="padding-left: 4rem; " href="# "> <img class="logo " src="./images/logo.jfif "
+            alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -41,6 +52,13 @@
             <li class="nav-item ">
                 <a class="nav-link " href="./index.html/footer ">Contact Us</a>
             </li>
+
+            <form class="form-inline ">
+                <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                    aria-label="Search">
+                <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
+            </form>
+
         </ul>
     </div>
     <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
@@ -106,44 +124,56 @@
     <div class="our_work ">
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
         <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250 " alt="Card image cap ">
+            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250 "
+                alt="Card image cap ">
             <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
 
