--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
-        <span class="navbar-toggler-icon" ></span>
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"
+        style="background:none; border:none">
+        <span class="navbar-toggler-icon"></span>
     </button>
 
 
@@ -52,13 +53,15 @@
             <li class="nav-item ">
                 <a class="nav-link " href="./index.html/footer ">Contact Us</a>
             </li>
-
-            <form class="form-inline ">
-                <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
-                    aria-label="Search">
-                <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
-            </form>
-
+            <li style="padding-top: .3rem;">
+            <div style="background-color: #b18b22; border-radius: 4px;">
+                <form class="form-inline ">
+                    <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                        aria-label="Search"style="border-radius: 2px;">
+                    <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
+                </form>
+            </div>
+        </li>
         </ul>
     </div>
     <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
