--- a/collection.html
+++ b/collection.html
@@ -84,27 +84,11 @@
 
 </nav> -->
 
+
+
+
 <body>
 
-
-    <!-- pop up info
-    <div class="pmodel">
-        <div class="model">
-            <p>html popup,popup window,popup model,how to create a popup,how to create a popup in html,how to create a popup form in html, how to create a modal in javascript, create a modal in html css and javascript, javascript popup window, js popup,
-                beginners javascript project beginners, pure javascript window popup</p>
-            <span class="x" draggable="true">&times;</span>
-        </div>
-    </div> -->
-
-    <div class="jumbotron" style="background-image: url(./images/tail.jpg);">
-        <h1 class="display-3"><i>Tailoor Online!</i></h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p><i>If your are busy and you have no time to create account on our site then:</i></p>
-        <p class="lead">
-            <a class="btn btn-warning btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
-        </p>
-    </div>
 
     <!-- Our work -->
     <br><br>
@@ -117,7 +101,11 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
         <div class="card " style="width: 20rem; ">
@@ -125,7 +113,11 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
         <div class="card " style="width: 20rem; ">
@@ -133,7 +125,11 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
         <div class="card " style="width: 20rem; ">
@@ -141,7 +137,11 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
         <div class="card " style="width: 20rem; ">
@@ -149,7 +149,11 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
         <div class="card " style="width: 20rem; ">
@@ -157,20 +161,14 @@
             <div class="card-body ">
                 <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-
+            <span class="nav-text">
+                <a data-toggle="modal" data-target="#reserveModal">
+                    <span class="btn btn-success">Order Now!</span>
+            </a>
+            </span>
         </div>
 
     </div>
-
-
-    <!-- Contact us -->
-    <br><br>
-    <div class="contact_us ">
-        <p class="label ">CONTACT US</p><br><br>
-
-    </div>
-
-
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
 
