--- a/fabric.html
+++ b/fabric.html
@@ -84,89 +84,15 @@
 
 </nav> -->
 
+
+
+
 <body>
-
-
-    <!-- pop up info
-    <div class="pmodel">
-        <div class="model">
-            <p>html popup,popup window,popup model,how to create a popup,how to create a popup in html,how to create a popup form in html, how to create a modal in javascript, create a modal in html css and javascript, javascript popup window, js popup,
-                beginners javascript project beginners, pure javascript window popup</p>
-            <span class="x" draggable="true">&times;</span>
-        </div>
-    </div> -->
-
-    <div class="jumbotron" style="background-image: url(./images/tail.jpg);">
-        <h1 class="display-3"><i>Tailoor Online!</i></h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p><i>If your are busy and you have no time to create account on our site then:</i></p>
-        <p class="lead">
-            <a class="btn btn-warning btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
-        </p>
-    </div>
-
-    <!-- Our work -->
-    <br><br>
-    <p class="label ">OUR COLLECTION</p>
-
-    <div class="our_work ">
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250 " alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-    </div>
-
 
     <!-- Contact us -->
     <br><br>
     <div class="contact_us ">
-        <p class="label ">CONTACT US</p><br><br>
+        <p class="label ">Fabric</p><br><br>
 
     </div>
 
