--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div> -->
 
     <div class="jumbotron" style="background-image: url(./images/tail.jpg);">
-        <h1 class="display-3"><i>Tailoor Online!</i></h1>
+        <h1 class="display-3"><i>Tailor Online!</i></h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p><i>If your are busy and you have no time to create account on our site then:</i></p>
