--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
     <link rel="stylesheet" href="style./css/popinfo.css">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"
+        style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
+            src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -35,25 +45,28 @@
                 <a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span> Collection</a>
+                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span>
+                    Collection</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link about" href="fabric.html"><span class="fas fa-tshirt fa-lg"></span> Fabric</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="contact.html"><span class="fas fa-blender-phone fg-lg"></span> Contact Us</a>
+                <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
             </li>
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                            aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
+    <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
+    <i class="fas fa-user-circle fa-2x "></i>
 
 </nav>
 
@@ -96,77 +109,114 @@
         </div>
     </div> -->
 
-    <div class="jumbotron" style="background-image: url(./images/tail.jpg);">
-        <h1 class="display-3"><i>Tailor Online!</i></h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
+    <div class="jumbotron Home" style="background-image: linear-gradient(
+        rgba(110, 110, 110, 0.383), rgba(0, 0, 0, 0.945)), url(./images/tail.jpg);">
+        <h1 class="display-3" style="padding-top: 2.5rem; font-weight: 400;"><i>Tailor online!</i></h1>
+        <p class="lead">Get your fabric select your colour and get them stitched right on time.</p>
+        <br>
         <p><i>If your are busy and you have no time to create account on our site then:</i></p>
         <p class="lead">
-            <a class="btn btn-warning btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
+            <a class="btn btn-danger btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
         </p>
     </div>
 
     <!-- Our work -->
-    <br><br>
-    <p class="label ">OUR COLLECTION</p>
+    <br>
+    <p class="label">OUR COLLECTION</p>
 
     <div class="our_work ">
 
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
             </div>
-
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
         </div>
 
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-        <div class="card " style="width: 20rem; ">
-            <img class="card-img-top " style="height: 18rem; " src="https://source.unsplash.com/300x250 " alt="Card image cap ">
-            <div class="card-body ">
-                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-        </div>
-
-    </div>
 
 
-    <!-- Contact us -->
-    <br><br>
-    <div class="contact_us ">
-        <p class="label ">CONTACT US</p><br><br>
 
     </div>
 
@@ -176,7 +226,6 @@
 
 
 </body>
-
 
 
 <footer>
