--- a/fabric.html
+++ b/fabric.html
@@ -21,12 +21,15 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+        aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
+            src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -35,25 +38,28 @@
                 <a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span> Collection</a>
+                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span>
+                    Collection</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link about" href="fabric.html"><span class="fas fa-tshirt fa-lg"></span> Fabric</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="contact.html"><span class="fas fa-blender-phone fg-lg"></span> Contact Us</a>
+                <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
             </li>
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                            aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
+    <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
+    <i class="fas fa-user-circle fa-2x "></i>
 
 </nav>
 
@@ -84,15 +90,126 @@
 
 </nav> -->
 
-
-
-
 <body>
 
-    <!-- Contact us -->
-    <br><br>
-    <div class="contact_us ">
-        <p class="label ">Fabric</p><br><br>
+
+    <!-- pop up info
+    <div class="pmodel">
+        <div class="model">
+            <p>html popup,popup window,popup model,how to create a popup,how to create a popup in html,how to create a popup form in html, how to create a modal in javascript, create a modal in html css and javascript, javascript popup window, js popup,
+                beginners javascript project beginners, pure javascript window popup</p>
+            <span class="x" draggable="true">&times;</span>
+        </div>
+    </div> -->
+
+    <div class="jumbotron Home" style="background-image: linear-gradient(
+        rgba(110, 110, 110, 0.383), rgba(0, 0, 0, 0.945)), url(./images/tail.jpg);">
+        <h1 class="display-4" style="padding-top: 2.5rem; font-weight: 500;"><i>Tailor online!</i></h1>
+        <p class="lead">Get your fabric select your colour and get them stitched right on time.</p>
+        <br>
+        <p><i>If your are busy and you have no time to create account on our site then:</i></p>
+        <p class="lead">
+            <a class="btn btn-danger btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
+        </p>
+    </div>
+
+    <!-- Our work -->
+    <br>
+    <p class="label">OUR COLLECTION</p>
+
+    <div class="our_work ">
+
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+
+
+
 
     </div>
 
@@ -102,7 +219,6 @@
 
 
 </body>
-
 
 
 <footer>
